# iperf3_plotter

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  fairness.sh  plot_bytes.plt  plot_cwnd.plt  plot_iperf.sh  plot_pmtu.plt  plot_retransmits.plt  plot_rtt.plt  plot_rtt_var.plt  plot_throughput.plt  preprocessor.sh  setup.cfg
.github/workflows/: ci.yml
docs/: experiment_files.md  research_workflows.md
examples/: bbr3_showcase_manifest.example.csv  bbr3_showcase_plots.yaml  custom_plots.yaml  experiment.yaml  generate_bbr3_showcase_data.py  paper_style_plots.yaml  reproduce_bbr3_paper.py
lab/: Dockerfile  README.md  mininet_iperf_lab.py  run_docker_lab.sh
legacy/: README.md  plot_bytes.plt  plot_pmtu.plt  plot_rtt.plt  plot_rtt_var.plt  plot_throughput.plt
sample/: iperf.csv  my_test.json
src/iperf3_plotter/: __init__.py  __main__.py  cli.py  custom.py  experiment.py  manifest.py  metrics.py  outputs.py  parser.py  plots.py  report.py
tests/: test_custom_plots.py  test_experiment.py  test_parser_metrics.py
