[metadata]
name = iperf3-plotter
version = attr: iperf3_plotter.__version__
description = Python-first analysis and plotting toolkit for iperf3 JSON results.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Elie Kfoury
keywords = iperf3, tcp, congestion-control, plotting, networking
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Visualization
    Topic :: System :: Networking

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    matplotlib>=3.7
    pandas>=1.5
    typer>=0.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    iperfplot = iperf3_plotter.cli:app
